--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,4 @@
-title: Simple Python Template
+title: First Playground
 plan:
 - title: Python Snippet
-  statement: statement.md
+  statement: markdowns/statement.md
