Title, Introduction, and first error

--- a/techio.yml
+++ b/techio.yml
@@ -2,3 +2,7 @@ title: First Playground
 plan:
 - title: Python Snippet
   statement: statement.md
+projects:
+  python:
+    root: /python-project
+    runner: python:3
